# lit

./: CMakeLists.txt  Jenkinsfile  README.md
include/: entropy.hpp
test/: entropy_test.cpp
